Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

----

(02/03/2013) - Maintenance and Minor Bug Release - Version 1.8.9

[x] IE filters for buttons. This also removes the conflict with
    video plugins. (props Ulrich Pogson)
	
[*] FitVids [object] removal. (props Ulrich Pogson)
    @see: https://github.com/davatron5000/FitVids.js/pull/90
	
[+] Functions to check whether or not All in One SEO and WordPress 
    SEO are activated. In: /includes/functions.php and header.php 
	for WP SEO. If AIOSEOP, we will remove the Responsive's wp_title
	filter. And use wp_title() only for WP SEO. Pretty nice stuff.
	
[*] Theme Options info buttons. Changed "Donate Now" to more visible
    blue color and removed Responsive classes.

----

(01/27/2013) - Maintenance and Minor Bug Release - Version 1.8.8

[!] SelectBox for Android and iPhone
[*] SelectBox style.css improvements
[*] quirksmode.org link fix
[*] Support link for style.css
[x] Arabic language duplicates
[+] Hindi language

----

(01/06/2013) - Improvements - Version 1.8.7

----
Please see: http://themeid.com/forum/topic/4780/responsive-version-187/
----
[*] Copyright date change to 2013
[+] New and improved Responsive menu style updates in:
    - /js/responsive-scripts.js
	- /js/responsive-plugins.js
	- style.css
	- rtl.css	
[*] Language updates for:
    - responsive.pot
	- Italian
	- Dutch
	- Estonian
[+] SEO Improvements
    - Highly recommended wp_title filter added in functions.php
	-- http://codex.wordpress.org/Plugin_API/Filter_Reference/wp_title
	-- http://yoast.com/wordpress-themes-page-title/
[+] Unique function class for custom menus in widgets

----

(12/23/2012) - Maintenance and Improvements - Version 1.8.6
[+] Localization
    - responsive.pot
    - Languages improvements 
    - New Languages (40 total)
    - Arabic
    - Estonian
    - Hindi
    - Korean
    - Turkish
	
[+] If statement for breadcrumb lists and code formatting 